# Patterns

./: ArchitectureDiagram.drawio  CMakeLists.txt  CmakeLists.txt  README  main.cpp  project.txt  readme.md  variables.h
classes/: CMakeLists.txt  all_abstract_units.cpp  all_abstract_units.h  all_english_units.cpp  all_english_units.h  all_french_units.cpp  all_french_units.h  army.cpp  army.h  squad.cpp  squad.h  unit.cpp  unit.h  variables_eng.h  variables_fr.h
factories/: CMakeLists.txt  abstract_factory.h  english_factory.cpp  english_factory.h  french_factory.cpp  french_factory.h
help/: help.txt
source/: help.txt  variables.h
